Reetan.Nayak Dev 25/force-app/main/default/objects/User/fields/SSO__c.field-meta.xml
<CustomField>
    <fullName>SSO__c</fullName>
    <description>Field to store the 9 digit GE single sign on number of the user.  Used for reporting and uniquely identifying a user between systems. Eventually will be used to automatically populate the standard Federation ID field when true SSO is enabled.</description>
    <externalId>true</externalId>
    <label>SSO</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>