Reetan.Nayak Dev 25/force-app/main/default/objects/User/fields/Weekly_Report_Group__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Report_Group__c</fullName>
    <label>Weekly Report Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Channel_HCS</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>MDx</fullName>
            </value>
            <value>
                <fullName>MDx_Sales</fullName>
            </value>
            <value>
                <fullName>MDx_Function</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>MidWest_HCS</fullName>
            </value>
            <value>
                <fullName>MR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>