Reetan.Nayak Dev 25/force-app/main/default/objects/User/fields/Weekly_Report_Manager_SSO__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Report_Manager_SSO__c</fullName>
    <externalId>true</externalId>
    <label>Weekly Report Manager SSO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>