Reetan.Nayak Dev 25/force-app/main/default/objects/User/validationRules/Validate_SSO.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_SSO</fullName>
    <active>true</active>
    <description>If SSO is entered, it should be exactly 9 digits and consist of only digits 0-9.</description>
    <errorConditionFormula>AND( 
NOT(ISBLANK(SSO__c))
,NOT(REGEX(SSO__c , &quot;[0-9]{9}&quot;)) 
,NOT($User.Bypass_Custom_Validation__c) 
)</errorConditionFormula>
    <errorDisplayField>SSO__c</errorDisplayField>
    <errorMessage>SSO should be 9 digits.</errorMessage>
</ValidationRule>